--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
 
       <main class="styles main">
         <h1 class="styles title">
-          Bem-vindo para o <a href="jw.org">Início</a>
+          Bem-vindo para o <a href="https://www.jw.org/Pt" target="branch">Início</a>
         </h1>
 
     
        
-          <div class="styles grid"><a href="https://www.jw.org/Pt" class="styles card1 card">JW.ORG</a>
+          <div class="styles grid"><a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">JW.ORG</a>
 
-          <a href="https://my.jw.org/home/pt/login" class="styles card1 card">MY JW</a>
+          <a href="https://my.jw.org/home/pt/login" target="branch" class="styles card1 card">MY JW</a>
 
-          <a href="https://login.jwpub.org/" class="styles card1 card">JW PUB</a>
+          <a href="https://login.jwpub.org/adfs/ls/?wa=wsignin1.0&wtrealm=https%3a%2f%2fmail.jwpub.org%2fowa%2f&wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f%253fauthRedirect%253dtrue&wct=2021-02-09T03%3a37%3a47Z#path=/mail" target="branch" class="styles card1 card">JW PUB</a>
 
-          <a href="https://www.jw.org/pt/Novidades/" class="styles card1 card">NOVIDADES</a>
+          <a href="https://www.jw.org/pt/Novidades/" target="branch" class="styles card1 card">NOVIDADES</a>
+
+          <a href="https://wol.jw.org/pt/wol/h/r5/lp-t" target="branch" class="styles card1 card">BIBLIOTECA ON-LINE</a>
+
+          <a href="https://awesome-hugle-755b65.netlify.app/" target="branch" class="styles card1 card">RELATÓRIO</a>
 
           <a href="" class="styles card">
             <h3>Atalho</h3>
