--- a/index.html
+++ b/index.html
@@ -18,47 +18,46 @@
 
   <div class="styles container">
       <Head>
-        <title>Create Next App</title>
+        <title>Cursos On-line</title>
         <link rel="icon" href="/favicon.ico" />
       </Head>
 
       <main class="styles main">
         <h1 class="styles title">
-          Bem-vindo para o <a href="https://www.jw.org/Pt" target="branch">Início</a>
+          Bem-vindo a <a href="index.html" target="branch">Cursos On-line</a>
         </h1>
 
-    
-       
-          <div class="styles grid"><a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">JW.ORG</a>
+        <div class="styles card">
+            <h3>Escolha um curso da sua preferência</h3>
+            <!--<p>Para principais sites</p>-->
+        </div>
 
-          <a href="https://my.jw.org/home/pt/login" target="branch" class="styles card1 card">MY JW</a>
+          <div class="styles grid">
 
-          <a href="https://login.jwpub.org/adfs/ls/?wa=wsignin1.0&wtrealm=https%3a%2f%2fmail.jwpub.org%2fowa%2f&wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f%253fauthRedirect%253dtrue&wct=2021-02-09T03%3a37%3a47Z#path=/mail" target="branch" class="styles card1 card">JW PUB</a>
+          <a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">Reforço escolar online<img src="espanho.png"></a>
 
-          <a href="https://www.jw.org/pt/Novidades/" target="branch" class="styles card1 card">NOVIDADES</a>
+          <a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">Curso de espanhol online<img src="espanho.png"></a>
 
-          <a href="https://wol.jw.org/pt/wol/h/r5/lp-t" target="branch" class="styles card1 card">BIBLIOTECA ON-LINE</a>
+         <!-- <a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">Curso de violão online<img src="espanho.png"></a>
 
-          <a href="https://awesome-hugle-755b65.netlify.app/" target="branch" class="styles card1 card">RELATÓRIO</a>
+          <a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">Curso de guarani online<img src="espanho.png"></a>
 
-          <a href="" class="styles card">
-            <h3>Atalho</h3>
-            <p>Para principais sites</p>
+          <a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">CURSO DE DESENVOLVEDOR WEB ON-LINE<img src="espanho.png"></a>
+
+          <a href="https://www.jw.org/Pt" target="branch" class="styles card1 card">CURSO DA BÍBLIA ON-LINE GRATUITO<img src="espanho.png"></a> -->
+
+          <a href="https://api.whatsapp.com/message/CSJBPSCKTWDEH1" target="branch" class="styles card">
+          <center>
+            <h3>CONTATO</h3>
+            <p>(67) 9 8182-7065</p>
+          </center>
           </a>
 
-          </a>
         </div>
       </main>
 
-      <footer class="styles footer">
-        <a
-          href=""
-          target="_blank"
-          rel=""
-        >
-          Powered by{' '}
-          <img src="" alt="" class="styles logo" />
-        </a>
+      <footer class="styles footer"> <br><br>
+        <center>Carinhosamente desenvolvido por <a href="https://wa.me/message/CSJBPSCKTWDEH1">edson.ocampo@gmail.com</a></center>
       </footer>
     </div>
 
