--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
       </div>
       <div class="coluna col3">
-        <img width="100%" src="img/vio.jpg">
+        <img width="100%" src="https://objective-shockley-d9386b.netlify.app/img/03.jpg">
         
       </div>
     </div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="linha">
-      <div class="coluna col12">rodapé</div>
+      <div class="coluna col12">______________________________________</div>
     </div>
 
   </body>
